// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Common.Router - Internal Interface test allowPageLeave() 1`] = `
<Fragment>
  <RouteComponent
    className={null}
    content="initial route"
    controlled={true}
    disabled={false}
    hidden={false}
    id={null}
    key=".0"
    mainAttrs={null}
    name={null}
    noIndex={false}
    params={Object {}}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Modal
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key=".1"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test allowPageLeave() 2`] = `
<Fragment>
  <RouteComponent
    className={null}
    content="initial route"
    controlled={true}
    disabled={false}
    hidden={false}
    id={null}
    key=".0"
    mainAttrs={null}
    name={null}
    noIndex={false}
    params={Object {}}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Modal
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key=".1"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test preventPageLeave() 1`] = `
<Fragment>
  <RouteComponent
    className={null}
    content="initial route"
    controlled={true}
    disabled={false}
    hidden={false}
    id={null}
    key=".0"
    mainAttrs={null}
    name={null}
    noIndex={false}
    params={Object {}}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Modal
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key=".1"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test preventPageLeave() 2`] = `
<Fragment>
  <RouteComponent
    className={null}
    content="initial route"
    controlled={true}
    disabled={false}
    hidden={false}
    id={null}
    key=".0"
    mainAttrs={null}
    name={null}
    noIndex={false}
    params={Object {}}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Modal
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key=".1"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test scrollToFragment() 1`] = `
<Fragment>
  <RouteComponent
    className={null}
    content="initial route"
    controlled={true}
    disabled={false}
    hidden={false}
    id={null}
    key=".0"
    mainAttrs={null}
    name={null}
    noIndex={false}
    params={Object {}}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Modal
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key=".1"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test scrollToFragment() 2`] = `
<Fragment>
  <RouteComponent
    className={null}
    content="initial route"
    controlled={true}
    disabled={false}
    hidden={false}
    id={null}
    key=".0"
    mainAttrs={null}
    name={null}
    noIndex={false}
    params={Object {}}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Modal
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key=".1"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test setRoute() 1`] = `
<Fragment>
  <RouteComponent
    className={null}
    content="initial route"
    controlled={true}
    disabled={false}
    hidden={false}
    id={null}
    key=".0"
    mainAttrs={null}
    name={null}
    noIndex={false}
    params={Object {}}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Modal
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key=".1"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test setRoute() 2`] = `
<Fragment>
  <RouteComponent
    className={null}
    content="component, UC direct, no history"
    controlled={true}
    disabled={false}
    hidden={false}
    id={null}
    key=".0"
    mainAttrs={null}
    name={null}
    noIndex={false}
    params={
      Object {
        "noHistory": true,
      }
    }
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Modal
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key=".1"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  />
</Fragment>
`;
